--- a/slides/5.spreadsheets.html
+++ b/slides/5.spreadsheets.html
@@ -458,7 +458,7 @@ template: criteria
 
 The completed spreadsheet is available [here](https://docs.google.com/spreadsheets/d/1Q4J2NgwArqa-f-t-deEEEobmfQwKaEcFwseue8vAkUw/edit#gid=0).
 
-Our data and initial analysis suggest that _about 25% of the population in New York's Hudson Valley have had COVID-19_... that's 1 in every 5 people.
+Our data and initial analysis suggest that _about 29% of the population in New York's Hudson Valley have had COVID-19_... that's almost 1 in every 3 people.
 
 --
 
