updated formatting of lists

--- a/slides/5.spreadsheets.html
+++ b/slides/5.spreadsheets.html
@@ -463,6 +463,7 @@ Our data and initial analysis suggest that _about 29% of the population in New Y
 --
 
 - Does this smell good?
+
   - Look over the numbers and do a sanity check.
   - Compare your results to other reputable sources of information and analysis.
 
@@ -536,15 +537,9 @@ It might be interesting to see how COVID-19 case counts vary over time.
 
 --
 
-    - matching a specified date
-
---
-
-    - matching a specified county name
-
---
-
-    - matching the state of New York
+    - matching a specified **date**
+    - matching a specified **county name**
+    - matching the **state** of New York
 
 ---
 
